[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]

[node name="Level" type="Node2D"]

script = ExtResource( 1 )

[node name="Walls" type="Node2D" parent="." index="0"]

[node name="Wall1" parent="Walls" index="0" instance=ExtResource( 2 )]

position = Vector2( 232.042, 214.854 )

[node name="Wall2" parent="Walls" index="1" instance=ExtResource( 2 )]

position = Vector2( 281.042, 214.854 )

[node name="Wall3" parent="Walls" index="2" instance=ExtResource( 2 )]

position = Vector2( 332.042, 214.854 )


